   signature detection. (Jelmer Vernooĳ)

 * Fix Git filter protocol implementation to properly handle the two-phase
   response format (initial headers, content, final headers) as specified in
   the Git protocol documentation. This fixes compatibility with Git LFS and
   other filters that send status messages in final headers.
   (Jelmer Vernooĳ, #1889)

0.24.2	2025-09-25

 * Added ``porcelain.shortlog`` function to summarize commits by author,
   similar to git shortlog. (Muhammad Usama, #1693)

 * Fix merge functionality to gracefully handle missing optional merge3 dependency
   by raising informative ImportError with installation instructions.
   (Jelmer Vernooĳ, #1759)

 * Fix worktree CLI tests to properly change to repository directory.
   (Jelmer Vernooĳ, #1738)

 * Add ``temporary_worktree`` context manager for creating temporary worktrees
   that are automatically cleaned up. (Jelmer Vernooĳ)

 * Add ``exist_ok`` parameter to ``add_worktree`` to allow creation with
   existing directories. (Jelmer Vernooĳ)

 * Add colorized diff support for the ``show`` command with ``--color``
   argument. (Jelmer Vernooĳ, #1741)

 * Fix Windows path handling in ``_ensure_parent_dir_exists`` to correctly
   handle drive letters during checkout operations. (Jelmer Vernooĳ, #1751)

 * Fix Windows config loading to only use current Git config path,
   avoiding loading older config files.  (Jelmer Vernooĳ, #1732)

 * Add interactive rebase support with ``git rebase -i``, including support
   for pick, reword, edit, squash, fixup, drop, exec, and break commands.
   (Jelmer Vernooĳ, #1696)

 * Fix handling of CRLF line endings with ``core.autocrlf = input`` to prevent
   unchanged files from appearing as unstaged in status.
   (Jelmer Vernooĳ, #1773)

 * Add support for ``core.whitespace`` configuration for whitespace error
   detection and fixing. Supports blank-at-eol, space-before-tab, indent-with-non-tab,
   tab-in-indent, blank-at-eof, cr-at-eol, and tabwidth settings.